<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">

    <!-- TODO: Add "Dongle" font -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/blue_600"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/iv_logo"
            app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/tv_app_name"/>

    <ImageView
            android:layout_width="132dp"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/app_logo"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_greeting"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/iv_logo"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome_back"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/blue_600"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_email"
            android:id="@+id/tv_greeting"/>

    <io.github.skincanorg.skincan.widget.edittext.RoundedEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="54dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@id/tv_greeting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_password"
            android:id="@+id/et_email"/>

    <io.github.skincanorg.skincan.widget.edittext.RoundedEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="54dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_forgot_password"
            android:id="@+id/et_password"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/forgot_password"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            android:id="@+id/tv_forgot_password"/>

    <io.github.skincanorg.skincan.widget.RoundedButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:layout_constraintStart_toStartOf="@id/et_email"
            app:layout_constraintEnd_toEndOf="@id/et_email"
            app:layout_constraintBottom_toTopOf="@id/btn_goto_register_container"
            android:id="@+id/btn_login"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btn_goto_register_container">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/blue_600"
                android:text="@string/register_now"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>