<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CameraActivity"
        app:layoutDescription="@xml/activity_camera_scene">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/captured_image_preview"
            android:id="@+id/iv_image_preview"/>

    <androidx.camera.view.PreviewView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/view_finder"/>

    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/capture_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/capture_img"/>

    <ImageView
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_flip_camera"
            android:contentDescription="@string/flip_camera"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/flip_camera"/>

    <ImageView
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_image"
            android:contentDescription="@string/gallery"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/gallery"/>


    <ImageView
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_close"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/close_button"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/close_camera"/>

    <ImageView
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_torch_camera"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/torch_camera"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/torch_camera"/>

</androidx.constraintlayout.motion.widget.MotionLayout>