<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:textColor="#267DFF"
        android:text = "@string/greetins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/greetings"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/user_name"
        android:textColor="#267DFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/greetings" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/emoji_description"
        android:src="@drawable/ic_emoji"
        app:layout_constraintStart_toEndOf="@+id/user_name"
        app:layout_constraintTop_toTopOf="@id/user_name" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_pfp_user_placeholder"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/placeholder_user_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/placeholder_user"/>

    <include
        android:id="@+id/include"
        layout="@layout/result_card"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/what_s_going_on"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <include
        android:id="@+id/include2"
        layout="@layout/news_card"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="437dp" />


</androidx.constraintlayout.widget.ConstraintLayout>