<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.result.ResultActivity">

    <androidx.cardview.widget.CardView
        android:layout_height="0dp"
        android:layout_marginHorizontal="64dp"
        android:layout_width="0dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/pict_wrapper">

        <ImageView
            android:contentDescription="@string/result_pict"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:src="@drawable/illustration"
            android:id="@+id/iv_result_pict" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:text="@string/result"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/pict_wrapper"
        android:id="@+id/tv_result" />

    <TextView
        android:background="@drawable/bg_full_round"
        android:backgroundTint="#B3FFD1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:paddingHorizontal="28dp"
        android:paddingVertical="6dp"
        android:text="@string/clear"
        android:textColor="#276C1C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        android:id="@+id/tv_result_status" />

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        app:cardBackgroundColor="?attr/colorSurfaceVariant"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_result_status">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginVertical="48dp"
                android:layout_width="match_parent"
                android:textSize="16sp"
                tools:text="Great!\nYou’re clear from skin cancer\n\nStay safe from cancer risk potential"
                android:id="@+id/tv_result_desc" />

            <TextView
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_width="match_parent"
                android:textSize="12sp"
                tools:text="Scanned at: 6 May 2022, 13:30"
                android:id="@+id/tv_result_time" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>